#13371 Corrige visualização dos usuários pelo supervisor